to activate --enable-preview, need to define export MAVEN_OPTS="--enable-preview"