@@ -78,8 +78,7 @@
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
-                        <target>${java.version}</target>
-<!--                        <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -88,7 +87,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <!--                        <argLine>&#45;&#45;enable-preview</argLine>-->
+                        <argLine>--enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -97,7 +96,7 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven-failsafe-plugin.version}</version>
                     <configuration>
-                        <!--                        <argLine>&#45;&#45;enable-preview</argLine>-->
+                        <argLine>--enable-preview</argLine>
                     </configuration>
                 </plugin>
             </plugins>
