@@ -45,9 +45,9 @@
                         <source>${java.version}</source>
                         <target>${java.version}</target>
                         <compilerArgs>
-<!--                            <arg>&#45;&#45;enable-preview</arg>-->
+                            <arg>--enable-preview</arg>
                         </compilerArgs>
-                        <!--                        <jvmArgs>&#45;&#45;enable-preview</jvmArgs>-->
+                        <jvmArgs>--enable-preview</jvmArgs>
                     </configuration>
                     <executions>
                         <execution>
